[project]
name = "physioprep"
version = "0.1.0"
description = "Physioprep: A preprocessing pipeline for physiological waveform datasets."
authors = [
    {name = "Milad Saadat",email = "saadatmilad1792@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"