[project]
name = "physioprep"
version = "0.0.1a1"
description = "Physioprep: A preprocessing pipeline for physiological waveform datasets."
authors = [
    {name = "Milad Saadat",email = "saadatmilad1792@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "wfdb (>=4.3.0,<5.0.0)",
    "numpy (>=2.3.2,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

